display fixes for ui and week 9 exercise rest time:
* fixed week 9 to display right rest time for exercise pair, fixed exercise field name
* added link to full exercise image in new window/tab
* fixed display of current day icon, moved to right of day info, avoid different number of lines for day display
* fix attempt for cutoff exercise notes, moved set/rep/rest counts to column layout right side, allow for more notes room
* added preloading svg images

--- a/gym/app.css
+++ b/gym/app.css
@@ -25,6 +25,14 @@
 .day-list md-list-item {
   background-color: white; /* avoid day bg color being applied to list */
 }
+.current-day-icon-placeholder {
+  width: 30px;
+}
+md-list-item  .md-list-item-inner > md-icon:first-child.current-day-icon {
+  margin-right: 5px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
 .content-title {
   padding-left: 0px;
   padding-right: 0px;
@@ -35,6 +43,9 @@
 }
 .content-view {
   max-width: 550px
+}
+.exercise-left-column {
+  margin-top:0px;
 }
 .exercise img {
   width: 100%;
